[gd_scene load_steps=2 format=3 uid="uid://c7lvmejw5lum3"]

[ext_resource type="Script" path="res://content/menu.gd" id="1_eklle"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eklle")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
offset_left = 493.0
offset_top = 249.0
offset_right = 539.0
offset_bottom = 319.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Continue" type="Button" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "Continue"

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Seed:"

[node name="TextEdit" type="TextEdit" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(116, 35)
layout_mode = 2
placeholder_text = "Seed"

[node name="Start" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Start"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="ready" from="MarginContainer/VBoxContainer/TextEdit" to="." method="_on_text_edit_ready"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Start" to="." method="_on_button_pressed"]
